fix live session and userInsession status